--- a/preamble.tex
+++ b/preamble.tex
@@ -13,6 +13,8 @@
 \usepackage[htt]{hyphenat}
 \hyphenation{he-lio-trope opos-sum}
 \tracingparagraphs=1
+\tolerance=1000
+\emergencystretch=3em
 %Hyphenation in Devanāgarī of the edition still missing? Probably this needs to be modified in babel-iast package? 
 
 %%% babel
@@ -222,6 +224,7 @@ hpbmk = \textcolor{red}{hpb}
 \DeclareWitness{U2}{\selectlanguage{english}U\textsubscript{2}}{SORI 6082}[]
 \DeclareWitness{PT}{\selectlanguage{english}PT}{Prāṇatoṣiṇī}[]
 \DeclareWitness{YK}{\selectlanguage{english}YK}{Yogakarṇikā}[]
+\DeclareWitness{YTB}{\selectlanguage{english}YTB}{Yogatattvabindu}[]
 \DeclareWitness{J}{\selectlanguage{english}J}{Haṭhasaṅketacandrikā Jodhpur MS. No. 2244}[]
 \DeclareWitness{C}{\selectlanguage{english}C}{Haṭhasaṅketacandrikā Chennai GOML Ms. No. R 3239}[]
 \DeclareWitness{Cpc}{\selectlanguage{english}C\textsubscript{pc}}{Haṭhasaṅketacandrikā Chennai GOML Ms. No. R 3239}[]
