--- a/intro.bib
+++ b/intro.bib
@@ -12,6 +12,52 @@
   keywords    = {seclit},
 }
 
+@article{endo1993,
+title={The Works and Flourishing Period of Nārāyaṇatīrtha, the Author of the Yogasiddhāntacandrikā}, 
+author= {Ko, Endo},  
+year={1993},
+pages={41--60},
+series={Nagoya Studies in Indian Culture and Buddhism},
+volume={13},
+publisher={Nagoya University, Department of Indian Philosophy},
+address={Nagoya},
+keywords={seclit},
+}
+
+@incollection{hacker1979,
+  author    = {Hacker, Paul},
+  title     = {Inklusivismus},
+  editor    = {Gerhardt Oberhammer},
+  booktitle = {Inklusivismus: Eine indische Denkform},
+  publisher = {Institut für Indologie der Universität Wien, Sammlung De Nobili; Commission Agents E.J. Brill},
+  address   = {Wien},
+  year      = {1983},
+ keywords    = {seclit},
+}
+
+@incollection{birch2020,
+  author    = {Birch, Jason},
+  title     = {Haṭhayoga's Floruit on the Eve of Colonialism},
+  year      = {2020},
+  editor    = {Goodall, Dominik and Hatley, Shaman and Isaacson, Harunaga and Raman, Srilata},
+  booktitle = {Śaivism and the Tantric Traditions - Essays in Honour of Alexis G.J.S. Sanderson},
+  publisher = {Brill},
+  address   = {Leiden | Boston},
+ keywords    = {seclit},
+}
+
+@article{endo1998,
+title={The Medieval Yoga-s and the Patanjala-Yoga: Narayana Tirtha’s Interpretation of the Yogasutra.}, 
+author= {Ko, Endo},  
+year={1998},
+pages={25--39},
+series={The Journal of the Faculty of Letters},
+volume={44},
+publisher={Nagoya University, Department of Indian Philosophy},
+address={Nagoya},
+keywirds={seclit},
+}
+
 @inbook{birch2018proliferation,
   author       = {Birch, Jason},
   title        = {The Proliferation of Āsana-s in Late-Mediaeval Yoga Texts},
@@ -383,6 +429,18 @@ address={Lonavla},
   publisher = {De Gruyter},
   keywords = {seclit}, 
  }
+
+@incollection{stietencron1989,
+  author    = {Heinrich von Stietencron},
+  title     = {Geplanter Synkretismus: Kaiser Akbars Religionspolitik},
+  booktitle = {Die Religion von Oberschichten},
+  editor    = {Peter Antes and Donate Pahnke},
+  publisher = {diagonal-Verlag},
+  address   = {Marburg},
+  year      = {1989},
+  pages     = {53--72},
+  keywords  = {seclit},
+}
 
 @book{jones2008encyclopedia,
   title = {Encyclopedia of Hinduism},
@@ -1342,6 +1400,16 @@ Institut, Universitätt Hamburg},
   address={Hamburg},
   keywords={printsource},
 }
+
+@book{clark2006,
+ title={The Daśanāmī-Saṃnyāsīs},
+ subtitle={The Integration of Ascetic Lineages into an Order},
+ year={2006},
+ author={Clark, Matthew},
+ publisher={Brill Academic Pub.},
+ address={Leiden},
+ keywords={printsource},
+ }
 
 @article{clark2011,
   booktitle={Yoga in Practice},
@@ -2595,6 +2663,16 @@ keywords={codex},
   keywords={seclit},
 }
 
+@book{shabdakalpadruma,
+  title={Śabdakalpadruma},
+  author={Deva Radhakanta and Vasu Varadaprasada and Vasu Haricana},
+  year={1967},
+  address={Varanasi},
+  publisher={Varanasi Caukhamba Samskrita Sirija Aphisa},
+  volume={5}, 
+  keywords={seclit},
+}
+
 @book{petersburger7,
   title={Sanskrit Wörterbuch},
   author={Boethling, O. und Roth, R.},
@@ -2602,15 +2680,45 @@ keywords={codex},
   volume={7},
   address={Petersburg},
   keywords={seclit},
+}
 
-@book{shabdakalpadruma, 
- title={Śabdakalpadruma}, 
- author={Radhakanta, Deva and Varadaprasada, Vasu and Haricana, Vasu}, 
- year={1967}, 
- address={Varanasi}, 
- publisher={Varanasi Caukhamba Samskrita Sirija Aphisa}, 
- keywords={seclit}, 
- volume={5}, 
+@book{jahangir1999,
+  author    = {Salīm Nūruddīn Jahangir},
+  title     = {The Jahangirnama: Memoirs of Jahangir, Emperor of India},
+  translator = {Wheeler M. Thackston},
+  year      = {1999},
+  publisher = {Oxford University Press},
+  address   = {New York},
+   keywords={seclit},
+}
+
+@article{eaton2001,
+  author  = {Richard Eaton},
+  title   = {Temple Desecration and Indo-Muslim States},
+  journal = {Frontline},
+  date    = {2001-01-05},
+  note    = {Available online},
+  url     = {https://frontline.thehindu.com/static/html/fl1802/18020140.htm}, 
+  keywords={seclit},
+}
+
+@book{titus1979,
+  author    = {Murray T. Titus and E.C. Dewick},
+  title     = {Indian Islam},
+  year      = {1979},
+  publisher = {Munshiram Manoharlal Publishers},
+  address   = {Delhi},
+  %pages     = {24},
+   keywords={seclit},
+}
+
+@book{hooja2006,
+  author    = {Rima Hooja},
+  title     = {A History of Rajasthan},
+  year      = {2006},
+  publisher = {Rupa \& Company},
+  %pages     = {493--495}
+  keywords={seclit},
 }
 
 @book{aryan, 
