--- a/bindu.tex
+++ b/bindu.tex
@@ -1192,8 +1192,7 @@ idānīṃ
 %In the middle of this seat (\textit{pīṭha}) exists a single form having the shape of a flame.             
 %-----------------------
 \note[type=testium, labelb=33, nosep]{ \approx  \textit{Yogasaṃgraha} (IGNCA 30020 folio 1r. l. 7): tatpīṭhamadhye agniśikhākārā gaṇeśamūrttir varttate |}
-tatpīṭhamadhye
-\app{\lem[wit={E}]{'gniśikhākāraikā}
+tatpīṭhamadhye-\app{\lem[wit={E}]{'gniśikhākāraikā}
   \rdg[wit={X,U2}]{agniśikhākārā ekā}
   \rdg[wit={P}]{magniśikhākārā ekā}
   \rdg[wit={L}]{jñiśikhākarāṇakā}}
@@ -10390,7 +10389,7 @@ brahma\app{\lem[wit={ceteri}, alt={°randhra°}]{randhra}
 %-----------------------------
 %Now the divisions of the totality of container [for concentration] are taught.
 %-----------------------------
-   \note[type=source, labelb=211, nosep]{cf. YSv (PT p. 832) = YK 2.15: ṣoḍaśādhārabhedan tu śṛṇu devi viśeṣataḥ |}
+   \note[type=source, labelb=211, nosep]{cf. YSv (PT p. 839) = YK 2.15: ṣoḍaśādhārabhedan tu śṛṇu devi viśeṣataḥ |}
    \note[type=source, labelb=210, nosep]{cf. SSP 2.10 (Ed. p. 29): atha ṣoḍaśādhārāḥ kathyante |}
    \note[type=testium, labelb=210x, nosep]{cf. \citetitle{hathasamketacandrikachennai} (GOML R3239 fol. 201 l. 20): ity ādhārāḥ ṣodaśa athoktānāṃ ṣoḍaśādhārāṇāṃ kartavyanām āha}
 \app{\lem[wit={ceteri}, alt={idānīm}]{idānī\skp{m-ā}}
