--- a/intro.bib
+++ b/intro.bib
@@ -24,6 +24,18 @@ address={Nagoya},
 keywords={seclit},
 }
 
+@book{oberlies2012,
+  author    = {Thomas Oberlies},
+  title     = {Hinduismus: Eine Einführung},
+  publisher = {FISCHER Taschenbuch},
+  year      = {2012},
+  address   = {Frankfurt am Main},
+  %isbn      = {978-3-596-19262-5},
+  %pages     = {130},
+  %note      = {Verfügbar, Erscheinungstermin: 23.02.2012}
+  keywords={seclit},
+}
+
 @incollection{hacker1979,
   author    = {Hacker, Paul},
   title     = {Inklusivismus},
@@ -460,16 +472,6 @@ address={Lonavla},
   address={Kathmandu},
   keywords={printsource},
 }
-
-@book{yogacintamani,
- title={Yogacintāmaṇi (Śivānandasarasvatī)},
- editor={Śarma, Haridās},
- year={no date of publication},
- publisher={Calcutta Oriental Press},
- address={Calcutta},
- keywords={printsource},
- }
-
 
 @book{sivasvarodaya,
   title={Śivasvarodaya},
@@ -1526,7 +1528,7 @@ Sound},
 @book{datta2024,
  title= {Dattātreyayogaśāstra},
  editor= {Mallinson, James},
- year= {2024},
+ year= {forthcoming 2024},
   publisher={École française d’Extrême-Orient},
   address={Pondicherry},
   series={Collection Indologie 153?, Haṭha Yoga Series 5?},
@@ -1754,6 +1756,21 @@ keywords={printsource},
   address={Leipzig},
   publisher={B.G. Teubner Verlagsgesellschaft},
   keywords={seclit},
+}
+
+@incollection{maas2009,
+  author    = {Philipp Maas},
+  title     = {The So-called Yoga of Suppression in the Pātañjala Yogaśāstra},
+  booktitle = {Yogic Perception, Meditation, and Altered States of Consciousness},
+  editor    = {Eli Franco and Dagmar Eigner},
+  series    = {Sitzungsberichte der phil.-hist. Klasse},
+  volume    = {794},
+  number    = {Beiträge zur Kultur- und Geistesgeschichte Asiens 64},
+  pages     = {263--282},
+  year      = {2009},
+  publisher = {Verlag der Österreichischen Akademie der Wissenschaften},
+  address   = {Vienna},
+  keywords  = {seclit},
 }
 
 @book{katre1954,
@@ -2518,6 +2535,41 @@ keywords={codex},
    address={Panjab University Library Lahore},
    note={Ms. no. 6922 dated śaka 1552},
    keywords={codex},
+}
+
+@book{yogacintamani,
+  title={Yogacintāmaṇi},
+  editor={Haridāsa Śarma},
+  year={no date},
+  publisher={Calcutta Oriantal Press},
+  address={Calcutta},
+  keywords={printsource},
+}
+
+@book{patanjalayoga1904,
+  title={Pātañjalayogaśāstra}, 
+  subtitle={Pātañjalayogasūtrāṇi vācaspatimiśraviracitaṭīkāsaṃvalitavyāsabhāṣyasametāni tathā bhojadevaviracitarājamārtaṇḍābhidhavṛttisametāni},
+  year={1904},
+  series={Ānandāśramasaṃskṛtagrathāvaliḥ},
+  volume={47},
+  editor={Kāśīnātha Śāstri Āgāśe},
+  publisher={Ānandāśramamudraṇālaya},
+  address={Pune},
+  keywords={printsource},
+}
+
+@book{rajamartanda,
+   title={Rājamārtaṇḍa},
+   note={See Pātañjalayogaśāstra 1904},
+   keywords={printsource},
+}
+
+@book{patanjalabhasyavartika,
+  title={Pātañjalabhāṣyavārttika},
+  subtitle={Yogavārtikam Mahāmahopāyādhyāyaśrīvijñānabhikṣuviracitaṃ Yogabhāṣyavyākhyārūpaṃ Kāśīstharājakīapradhānapāṭhaśālāyāṃ sāṅkhyayogādhāpakena tātyāśāstryaparanāmnā paṭavardhanopanāmakena rāmakṛṣṇaśāstriṇā jyautiṣaśāstrādhyāpakena keśavaśāstriṇā ca pariṣkṛtya saṃśodhitaṃ tayor saṃmatyā ca Śrīmatā ḍākṛralājarasākhyasāhibena},
+  publisher={Meḍikalhālnāmake yantrālaye saṃmudrā prakāśitam},
+  year={1884},
+  keywords={printsource},
 }
 
 
