reading Jim, Jason, Svan 34-40

--- a/bindu.tex
+++ b/bindu.tex
@@ -398,7 +398,7 @@ yogaḥ svapiṇḍe
 Homage to the glorious Gaṇeśa. Now, the method of Rājayoga is laid down. \\
 \indent This is the fruit of Rājayoga: Through Rājayoga, the long-term durability of the body arises even when there are manifold royal pleasures [and] even when there is manifold royal entertainment and spectacle.\footnote{This unique definition of Rājayoga possibly alludes to the exceptionally wealthy lifestyle of Rāmacandra's audience.} Indeed, this is Rājayoga.
 %The fruit of Rājayoga is the enduring stability of the body, even during the enjoyment of numerous royal pleasures and amidst various royal entertainments and spectacles.\footnote{The definition of Rājayoga might allude to an exceptionally wealthy lifestyle of Rāmacandra's audience.} Indeed, this is Rājayoga.
-These are the varieties of this Rājayoga: \textbf{1.} Kriyāyoga (``Yoga of [mental] action''); \textbf{2.} Jñānayoga (``Yoga of gnosis''); \textbf{3.} Caryāyoga (``Yoga of conduct'');\footnote{The first three Yogas allude to the four \textit{pāda}s of the Śaiva \textit{āgama}s; namely \textit{kriyā}[\textit{pāda}], \textit{caryā}[\textit{pāda}], \textit{yoga}[\textit{padā}] and \textit{jñāna}[\textit{pāda}], see \citeauthor[2015: 77]{nishvasa2015}.} \textbf{4.} Haṭhayoga (``Yoga of force''); \textbf{5.} Karmayoga (``Yoga of deeds''); \textbf{6.} Layayoga (``Yoga of absorption''); \textbf{7.} Dhyānayoga (``Yoga of meditation''); \textbf{8.} Mantrayoga (``Yoga of Mantra''); \textbf{9.} Lakṣyayoga (``Yoga of foci''); \textbf{10.} Vāsanāyoga (``Yoga of mental residues''); \textbf{11.} Śivayoga (``Yoga of Śiva''); \textbf{12.} Brahmayoga (``Yoga of Brahman''); \textbf{13.} Advaitayoga (``Yoga of non-duality''); \textbf{14.} Siddhayoga (``Yoga of the Siddhas''); \textbf{15.} Rājayoga (``Yoga for kings'')\footnote{For Rājayoga with this meaning cf. \citeauthor[2014:12]{birch2014}.} These are the fifteen Yogas.\footnote{The definitive source of the list of the fifteen Yogas presented at the beginning of the text is uncertain. Rāmacandra's text is largely based on the content and structure of the \textit{Yogasvarodaya} (YSv) as quoted in \citetitle{ramatosana} (Ed. pp. 831-858). In this text, however, the list is incomplete. YSv mentions the total amount of fifteen Yogas but names only eight subcategories of Rājayoga. Because of that, Rāmacandra might have seen the necessity to complete it. The other source he used for compiling his text is \citetitle{ssplonavla} (SSP) which, however, does not present such a list. An almost identical list of fifteen Yogas is found in Nārāyaṇatīrtha's \citetitle{yogacandrika}. A comparable list of twelve Yogas occurs in Sundardās's \citetitle{sarvangayoga}. A detailed investigation of the fifteen Yogas is presented in the introduction starting from p. \pageref{yogatax}.}
+These are the varieties of this Rājayoga: \textbf{1.} Kriyāyoga (``Yoga of [mental] action''); \textbf{2.} Jñānayoga (``Yoga of gnosis''); \textbf{3.} Caryāyoga (``Yoga of conduct'');\footnote{The first three Yogas allude to the four \textit{pāda}s of the Śaiva \textit{āgama}s; namely \textit{kriyā}[\textit{pāda}], \textit{caryā}[\textit{pāda}], \textit{yoga}[\textit{padā}] and \textit{jñāna}[\textit{pāda}], see \citeauthor[2015: 77]{nishvasa2015}.} \textbf{4.} Haṭhayoga (``Yoga of force''); \textbf{5.} Karmayoga (``Yoga of deeds''); \textbf{6.} Layayoga (``Yoga of absorption''); \textbf{7.} Dhyānayoga (``Yoga of meditation''); \textbf{8.} Mantrayoga (``Yoga of mantra''); \textbf{9.} Lakṣyayoga (``Yoga of foci''); \textbf{10.} Vāsanāyoga (``Yoga of mental residues''); \textbf{11.} Śivayoga (``Yoga of Śiva''); \textbf{12.} Brahmayoga (``Yoga of Brahman''); \textbf{13.} Advaitayoga (``Yoga of non-duality''); \textbf{14.} Siddhayoga (``Yoga of the Siddhas''); \textbf{15.} Rājayoga (``Yoga for kings'')\footnote{For Rājayoga with this meaning cf. \citeauthor[2014:12]{birch2014}.} These are the fifteen Yogas.\footnote{The definitive source of the list of the fifteen Yogas presented at the beginning of the text is uncertain. Rāmacandra's text is largely based on the content and structure of the \textit{Yogasvarodaya} (YSv) as quoted in \citetitle{ramatosana} (Ed. pp. 831-858). In this text, however, the list is incomplete. YSv mentions the total amount of fifteen Yogas but names only eight subcategories of Rājayoga. Because of that, Rāmacandra might have seen the necessity to complete it. The other source he used for compiling his text is \citetitle{ssplonavla} (SSP) which, however, does not present such a list. An almost identical list of fifteen Yogas is found in Nārāyaṇatīrtha's \citetitle{yogacandrika}. A comparable list of twelve Yogas occurs in Sundardās's \citetitle{sarvangayoga}. A detailed investigation of the fifteen Yogas is presented in the introduction starting from p. \pageref{yogatax}.}
 \end{tlate}
  \ekddiv{
   head={[\uproman{2}. \textbf{Characteristic of Kriyāyoga}]},
@@ -12228,11 +12228,11 @@ kathyate/
 \app{\lem[wit={ceteri},alt={taddaṇḍa°}]{taddaṇḍa}
   \rdg[wit={U2}]{daṇḍa°}
 }\app{\lem[wit={E,U1},alt={°nāḍīmadhye}]{nāḍīmadhye}
-  \rdg[wit={P,U2}]{nālimadhye}
-  \rdg[wit={B}]{nālikāmadhye}
-  \rdg[wit={L}]{tālikāmadhye}
-  \rdg[wit={B}]{nālamadhye}
-  \rdg[wit={N1,N2}]{nālī}}
+  \rdg[wit={P,U2}]{°nālimadhye}
+  \rdg[wit={B}]{°nālikāmadhye}
+  \rdg[wit={L}]{°tālikāmadhye}
+  \rdg[wit={B}]{°nālamadhye}
+  \rdg[wit={N1,N2}]{°nālī}}
 \note[type=philcomm, labelb=270, lem={taddaṇḍanāḍīmadhye \ldots}]{After section \uproman{34} up until section \uproman{48}, approximately 25\% of the entire text disappears in the two most important witnesses of the α-group. The two Nepalese manuscripts N\textsubscript{1} and N\textsubscript{2} exhibit a substantial lacuna, which further suggests their close affiliation. They must both be derived from the same exemplar. The omissions of the readings of N\textsubscript{1} and N\textsubscript{2} will not be documented in the apparatus until after their respective gaps to prevent an unnecessarily inflated critical apparatus with entries for every omitted word. The reader will be informed in this apparatus layer once their evidence resumes.}
 \label{gapn1n2start}
 \app{\lem[wit={ceteri}]{tapolokaḥ}
@@ -12980,7 +12980,7 @@ lalāṭamadhye
 apare \app{\lem[wit={D,U1}]{parvatāḥ}
   \rdg[wit={E,U2}]{śailāḥ}
   \rdg[wit={B,P,L}]{śailā}}
-pādayo\skp{r-aṃ}\app{\lem[wit={D,E,P},alt={aṃgulīnāṃ}]{\skp{r-aṃ}gulīnāṃ}
+pādayo\skp{r-aṃ}\app{\lem[wit={D,E,P},alt={aṃgulīnāṃ}]{\skm{r-aṃ}gulīnāṃ}
   \rdg[wit={U1}]{aṃgulībhyāṃ}
   \rdg[wit={B,L}]{aṃguli°}}
 \app{\lem[wit={ceteri}]{mūleṣu}
@@ -13021,7 +13021,7 @@ idānīṃ
   \rdg[wit={B,L,P}]{navanaḍyas}
   \rdg[wit={D}]{ṇavānāḍyas}
   \rdg[wit={U1}]{ṇavānaḍyaḥs}}
-\app{\lem[wit={ceteri}]{tiṣṭhanti}
+\app{\lem[wit={ceteri}, alt={tiṣṭhanti}]{\skp{s-ti}ṣṭhanti}
   \rdg[wit={D,U2}]{tiṣṭhati}}/
 tanmadhye
 \app{\lem[wit={ceteri}]{navānāṃ nadīnāṃ}
