wei15 yogas bis bhakti english und zusammengefasst!

--- a/bindu.bib
+++ b/bindu.bib
@@ -12,6 +12,16 @@
   keywords    = {seclit},
 }
 
+@thesis{haas2018vom,
+  author    = {Dominik Haas},
+  title     = {Vom Feueraltar zum Yoga. Kohärenz und Konzept der Kaṭha-Upaniṣad},
+  school    = {Universität Wien},
+  year      = {2018},
+  note      = {Betreuerin: Mag. Dr. Marion Rastelli (IKGA, ÖAW; ISTB, Universität Wien). Die Nummerierung der Verse in der Übersetzung wurde im vorliegenden Dokument weggelassen.},
+  url       = {http://othes.univie.ac.at/52786/},
+  keywords  = {seclit},
+}
+
 @article{endo1993,
 title={The Works and Flourishing Period of Nārāyaṇatīrtha, the Author of the Yogasiddhāntacandrikā}, 
 author= {Ko, Endo},  
@@ -22,6 +32,15 @@ volume={13},
 publisher={Nagoya University, Department of Indian Philosophy},
 address={Nagoya},
 keywords={seclit},
+}
+
+@book{olivelle1998early,
+  author    = {Patrick Olivelle},
+  title     = {The Early Upaniṣads: Annotated Text and Translation},
+  year      = {1998},
+  publisher = {Oxford University Press},
+  address   = {Oxford},
+  pages     = {372--402}
 }
 
 @book{oberlies2012,
@@ -495,6 +514,17 @@ address={Lonavla},
   url = {https://archive.org/details/sanskritgrammari00whituoft},
 }
 
+@book{mw1899,
+  author       = {Sir M. Monier-Williams},
+  title        = {A Sanskrit-English Dictionary. Etymologically and Philologically Arranged with Special Reference to Cognate Indo-European Languages},
+  edition      = {New edition, greatly enlarged and improved with the collaboration of E. Leumann and C. Cappeller and other scholars},
+  year         = {1899},
+  publisher    = {Oxford University Press},
+  address      = {Oxford},
+  note         = {Reprinted lithographically Oxford 1956, 1960, 1964},
+  keywords     = {seclit},
+}
+
 @incollection{brunner1994place,
   author    = {Brunner, Hélène},
   title     = {The Place of Yoga in the Śaivāgamas},
@@ -504,7 +534,7 @@ address={Lonavla},
   pages     = {425--461},
   publisher = {Motilal Banarsidass},
   address   = {Delhi},
-  keywords= {seclit}, 
+  keywords  = {seclit}, 
 }
 
 @book{kriyayoganityananda2013,
@@ -2205,6 +2235,16 @@ keywords={printsource},
    keywords={critEd},
 }
 
+@phdthesis{kropf2005,
+  author       = {Marianna Kropf},
+  title        = {Rituelle Traditionen der Planetengottheiten (Navagraha) im Kathmandutal. Strukturen – Praktiken – Weltbilder},
+  school       = {Universität Heidelberg},
+  year         = {2005},
+  note         = {Dissertation},
+  url          = {https://fid4sa-repository.ub.uni-heidelberg.de/24/2/Text_Kropf.pdf},
+  keywords     = {seclit}, 
+}
+
 @book{mallinson2007,
    title={Śivasaṃhitā},
    subtitle={The Shiva Samhita},
@@ -2215,6 +2255,44 @@ keywords={printsource},
    keywords={printsource},
  }
 
+@book{slaje2014,
+  author    = {Walter Slaje},
+  title     = {Kingship in Kaśmīr (AD 1148-1459). From the Pen of Jonarāja, Court Paṇḍit to Sulṭān Zayn al-Ābidīn. Critically Edited by Walter Slaje with an Annotated Translation, Indexes and Maps},
+  year      = {2014},
+  publisher =  {Halle},
+  series    = {Studia Indologica Universitatis Halensis},
+  volume ={7}, 
+   note      = {Textgattung: Kāvya — Sachkategorie: Politik/Staat/Gesellschaft — Datierung: 15. Jhd. — Region: Kaschmir},
+  keywords ={printsource},
+}
+
+@book{wilke2011,
+  author    = {Annette Wilke and Oliver Moebus},
+  title     = {Sound and Communication: An Aesthetic Cultural History of Sanskrit Hinduism},
+  year      = {2011},
+  publisher = {Walter de Gruyter},
+  keywords ={seclit},
+}
+
+@book{nandikesvara1917,
+  author       = {Nandikeśvara and Ananda Kentish Coomaraswamy and Gopala Kristnayya Duggirala},
+  title        = {The Mirror of Gesture, Being the Abhinaya Darpana of Nandikeśvara},
+  year         = {1917},
+  publisher    = {Harvard University Press},
+  location     = {Cambridge},
+  contributor  = {Cornell University Library},
+ keywords ={seclit},
+}
+
+@book{geldner1907,
+  author    = {Karl F. Geldner},
+  title     = {Der Rigveda in Auswahl. Erster Teil. Glossar},
+  year      = {1907},
+  publisher = {Stuttgart},
+  note      = {Textgattung: Vedisch — Sachkategorie: ohne Spezifikation},
+  keywords  = {seclit},
+}
+
 @inbook{mallinson2018vajrolimudra,
   title        = {Yoga and Sex: What is the Purpose of Vajrolīmudrā?},
   author       = {James Mallinson},
@@ -2224,7 +2302,8 @@ keywords={printsource},
   publisher    = {V\&R unipress},
   address      = {Göttingen},
   pages        = {181--223},
-  note         = {With 55 figures. Published by Vienna University Press.}
+  note         = {With 55 figures. Published by Vienna University Press.},
+  keywords     = {seclit},
 }
 
 
@@ -2265,7 +2344,7 @@ keywords={printsource},
 } 
 
 @book{peterson1888,
-   title={Śārngadharapaddhati},
+   title={Śārṅgadharapaddhati},
    subtitle={The Paddhati of Śārngadhara: A Sanskrit Anthology},
    author={Śārṅgadhara},
    year={1888},
@@ -2513,6 +2592,13 @@ keywords={seclit},
    title={Brahmayāmalatantra},  
    address={National Archives Kathmandu},
    note={NAK MS 3–370, NGMPP Reel No. A 42/6. Palm-leaf, Script: Nevārī},
+   keywords={codex},
+}
+
+@codex{muktavali,
+   title={Haṭhapradīpikā Siddhāntamuktāvalī},  
+   address={Jodhpur},
+   note={Rajasthan Oriental Research Institute, Ms. no. 6756, Catalogued under the title Haṭhayogapradīpikā},
    keywords={codex},
 }
 
@@ -3147,6 +3233,13 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
    title={Chāndogya-Upaniṣad},
    note={see The Early Upanishads},
    pages={166-169}, 
+   keywords={printsource},
+}
+
+@book{kathaup,
+   title={Kaṭha-Upaniṣad},
+   note={see The Early Upanishads},
+   pages={372-402}, 
    keywords={printsource},
 }
 
