--- a/preamble.tex
+++ b/preamble.tex
@@ -315,6 +315,11 @@ surname=Liersch]
 %\DeclareShorthand{edd}{edd.}{Lit,Erm,Sm}
 \DeclareShorthand{egoscr}{em.}{ego}
 \DeclareShorthand{egoscrconj}{conj.}{ego}
+\DeclareShorthand{sellmerconj}{SELLMER conj.}{ego}
+\DeclareShorthand{birchconj}{BIRCH conj.}{ego}
+\DeclareShorthand{mallinsonconj}{MALLINSON conj.}{ego}
+\DeclareShorthand{birchem}{BIRCH em.}{ego}
+\DeclareShorthand{birchconj}{BIRCH conj.}{ego}
 \DeclareShorthand{egomute}{\unskip}{ego}
 
 \usepackage{xparse}
@@ -445,3 +450,10 @@ surname=Liersch]
 \counterwithout{table}{section}
 \counterwithout{table}{chapter}
 \renewcommand{\thetable}{\arabic{table}}
+
+
+
+%%% itemize linksbündig!
+
+\renewenvironment{itemize}{\begin{list}{$\bullet$} {\leftmargin1.5em \labelsep1em
+\rightmargin0cm \parsep0.5ex plus0.2ex minus0.1ex \itemsep0ex plus0.2ex}}{\end{list}}
